ucs-test-ucsschool (5.0.2-79) unstable; urgency=low

  * Bug #47451: test if ucsschool_role attribute is unset when feature is
    deactivated

 -- Daniel Troeder <troeder@univention.de>  Mon, 06 Aug 2018 10:27:40 +0200

ucs-test-ucsschool (5.0.2-78) unstable; urgency=low

  * Bug #47448: fix import error in 225_import-users_username_length_unittest

 -- Daniel Troeder <troeder@univention.de>  Mon, 06 Aug 2018 09:22:33 +0200

ucs-test-ucsschool (5.0.2-77) unstable; urgency=low

  * Bug #47450: add test then when importing into an additional school with
    alphanum lower name the user is not moved

 -- Daniel Troeder <troeder@univention.de>  Fri, 03 Aug 2018 12:27:05 +0200

ucs-test-ucsschool (5.0.2-76) unstable; urgency=low

  * Bug #47448: move test to ucsschool_import1

 -- Daniel Troeder <troeder@univention.de>  Fri, 03 Aug 2018 09:22:28 +0200

ucs-test-ucsschool (5.0.2-75) unstable; urgency=low

  * Bug #47447: add ucs-test for single source database, partial import user
    import scenario
  * Bug #47448: add ucs-test for custom configuration check interface

 -- Daniel Troeder <troeder@univention.de>  Thu, 02 Aug 2018 16:54:58 +0200

ucs-test-ucsschool (5.0.2-74) unstable; urgency=low

  * Bug #45715: add test for dry run support in pyhooks

 -- Daniel Troeder <troeder@univention.de>  Mon, 30 Jul 2018 17:19:37 +0200

ucs-test-ucsschool (5.0.2-73) unstable; urgency=low

  * Bug #47221: add test for PostReadPyHook

 -- Daniel Troeder <troeder@univention.de>  Sun, 29 Jul 2018 09:54:11 +0200

ucs-test-ucsschool (5.0.2-72) unstable; urgency=low

  * Bug #47162: add test for not is_countable exception

 -- Daniel Troeder <troeder@univention.de>  Fri, 27 Jul 2018 16:22:57 +0200

ucs-test-ucsschool (5.0.2-71) unstable; urgency=medium

  * Bug #47345: skip wait_for_drs_replication if object will not be replicated

 -- Jürn Brodersen <brodersen@univention.de>  Tue, 17 Jul 2018 10:03:39 +0200

ucs-test-ucsschool (5.0.2-70) unstable; urgency=medium
